--- a/package.json
+++ b/package.json
@@ -4,10 +4,9 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite && eslint. --ext .ts, .tsx",
     "build": "tsc && vite build",
-    "preview": "vite preview",
-    "lint": "eslint . --ext .ts,.tsx"
+    "preview": "vite preview"
   },
   "dependencies": {
     "@typescript-eslint/eslint-plugin": "^5.39.0",
@@ -22,6 +21,7 @@
     "prettier": "^2.7.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-text-transition": "^3.0.2",
     "tailwindcss": "^3.1.8"
   },
   "devDependencies": {
